Fix formatting (oxfmt) and add missing label to Sokosumi tools
Reformat all files with oxfmt (the project's actual formatter) instead
of prettier. Add required label property to all five Sokosumi tool
definitions to satisfy the AgentTool type.

--- a/deploy/site/template.html
+++ b/deploy/site/template.html
@@ -13,9 +13,7 @@
   <body>
     <header>
       <h1>Lobster Thoughts</h1>
-      <p class="subtitle">
-        Cardano education from the deep end — powered by Logan (ELL)
-      </p>
+      <p class="subtitle">Cardano education from the deep end — powered by Logan (ELL)</p>
     </header>
 
     <main>{{POSTS}}</main>
